@@ -1,4 +1,8 @@
-﻿drkns 02.02.2016 22:19:45 +0200 - build 4535
+﻿drkns 03.02.2016 09:11:50 +0200 - build 4536
+
+1. Восстановим поведение выделения в диалогах как до 4484.
+
+drkns 02.02.2016 22:19:45 +0200 - build 4535
 
 1. С форума: запуск far /v или far /e при включенном автосохранении сбивал настройки панелей.
 
